# Valid-X-AI-Powered-Startup-Validation-Platform-main

./: .gitignore  README.md  app.py  auth.py  config.py  database.py  main.py  pyproject.toml  requirements.txt
graphs/: workflow.py
models/: chat_model.py
nodes/: advisor.py  competitor_analysis.py  competitor_intelligence.py  financial_viability.py  investor_decision.py  market_analyst.py  risk_assessor.py
prompts/: advisor.txt  competitor_analyst_prompt.txt  competitor_intelligence.txt  financial_viability.txt  investor_decision.txt  market_analyst.txt  risk_assessor.txt
state/: agent_state.py
static/css/: analysis.css  auth.css  global.css  home.css  loader.css
static/js/: analysis.js  auth.js  home.js  theme.js
templates/: analysis.html  home.html  index.html  loader.html  login.html  signup.html
tools/: web_search_tool.py
